--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,11 +8,10 @@ keywords = ["bitex", "bitcoin", "exchange", "payments"]
 license = "WTFPL"
 
 [dependencies]
-curs = "0.1.1"
+curs = { version = "^0.1.2", git = "https://github.com/bitex-la/rust-curs.git", branch = "serde_with_decimal" }
+serde_macros = { version = "^0.8.0", git = "https://github.com/nubis/serde.git" }
+serde = { version = "^0.8.0", git = "https://github.com/nubis/serde.git" }
 mime_guess = "=1.4.0"
-serde = "0.7"
-serde_json = "0.7"
-serde_macros = "0.7.2"
 
 [dev-dependencies]
 http_stub = "0.1.2"
