--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "bitex"
-version = "0.1.0"
+version = "0.1.1"
 authors = ["Nubis <yo@nubis.im>"]
 description = "Bitex API client in rust"
 repository = "https://github.com/bitex-la/rust-bitex"
@@ -8,11 +8,10 @@ keywords = ["bitex", "bitcoin", "exchange", "payments"]
 license = "WTFPL"
 
 [dependencies]
-curs = { version = "^0.1.2", git = "https://github.com/bitex-la/rust-curs.git", branch = "serde_with_decimal" }
-serde_macros = { version = "^0.8.0", git = "https://github.com/nubis/serde.git" }
-serde = { version = "^0.8.0", git = "https://github.com/nubis/serde.git" }
+curs = { version = "^0.1.3" }
+serde_macros = { version = "^0.8.3" }
+serde = { version = "^0.8.0" }
 mime_guess = "=1.4.0"
-decimal = "0.5.0"
 
 [dev-dependencies]
 http_stub = "0.1.2"
